--- a/home.html
+++ b/home.html
@@ -12,31 +12,29 @@
 <body>
     <div class="navbar">
         <div class="max-width">
-            <div class="logo">
-                <a href="#">KG</a><span>Agenda</span>
-                <ul class="menu">
-                    <li>
-                        <a href="#">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="#">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="#">Serviços</a>
-                    </li>
-                    <li>
-                        <a href="#">Especialidades</a>
-                    </li>
-                    <li>
-                        <a href="#">Equipe</a>
-                    </li>
-                    <li>
-                        <a href="#">Contato</a>
-                    </li>
-                </ul>
-                <div class="menu-btn">
-                    <ion-icon name="menu-outline"></ion-icon>
-                </div>
+            <div class="logo"><a href="#">KG<span>Agenda</span></a></div>
+            <ul class="menu">
+                <li>
+                    <a href="#">Inicio</a>
+                </li>
+                <li>
+                    <a href="#">Sobre</a>
+                </li>
+                <li>
+                    <a href="#">Serviços</a>
+                </li>
+                <li>
+                    <a href="#">Especialidades</a>
+                </li>
+                <li>
+                    <a href="#">Equipe</a>
+                </li>
+                <li>
+                    <a href="#">Contato</a>
+                </li>
+            </ul>
+            <div class="menu-btn">
+                <ion-icon name="menu-outline"></ion-icon>
             </div>
         </div>
     </div>
@@ -64,6 +62,7 @@
             </div>
         </div>
     </section>
+
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
