--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>KG Agenda</title>
 
     <link rel="stylesheet" href="stylehome.css">
+    <link rel="stylesheet" href="/libs/fontawesome/css/all.css">
     <link rel="shortcut icon" href="./img/LogoAgenda.png" type="image/x-icon">
 </head>
 
@@ -88,24 +89,24 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <ion-icon name="brush-outline"></ion-icon>
-                        <div class="text">Implante</div>
+                        <i class="fa-solid fa-tooth"></i>
+                        <div class="text">Implantes</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita neque, accusantium quo consequuntur quod dolor.</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="box">
-                        <ion-icon name="trending-up-outline"></ion-icon>
-                        <div class="text">Aparelho</div>
+                        <i class="fa-solid fa-teeth"></i>
+                        <div class="text">Aparelhos</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita neque, accusantium quo consequuntur quod dolor.</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="box">
-                        <ion-icon name="code-outline"></ion-icon>
-                        <div class="text">Limpeza</div>
+                        <i class="fa-solid fa-tooth"></i>
+                        <div class="text">Limpezas</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita neque, accusantium quo consequuntur quod dolor.</p>
                     </div>
                 </div>
@@ -168,7 +169,7 @@
     <!--sessão.equipe-->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">Nosso pessoal</h2>
+            <h2 class="title">Nossa Equipe</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
