Atulizacao do usuario

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="img/img-2.jpg" alt="">
-                        <div class="text">Jéssica Gondo</div>
+                        <div class="text">Solange Pinheiro</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
                     </div>
@@ -190,7 +190,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="img/img-3.jpg" alt="">
-                        <div class="text">Patricia</div>
+                        <div class="text">Jéssica Gondo</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
                     </div>
@@ -198,7 +198,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="img/img-4.jpg" alt="">
-                        <div class="text">Wilsson</div>
+                        <div class="text">Wilsson Rodrigues</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
                     </div>
@@ -206,7 +206,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="img/img-5.jpg" alt="">
-                        <div class="text">Kenzo</div>
+                        <div class="text">Patricia Fernandes</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
                     </div>
