--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <!--Modal para visualizar perfil do doutor-->
     <div id="modal-info" class="modal-container">
         <div class="modal">
-            <h3>Teste titulo</h3>
+            <h3 class="text">Teste titulo</h3>
             <form>
                 <input type="text" class ="input" placeholder="Email">
                 <input type="button" class="button" value="cadastrar">
