--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="max-width">
             <h2 class="title">Nossa Equipe</h2>
             <div class="carousel owl-carousel">
-                <div class="card card-doutor">
+                <div id="card-doutor1" class="card">
                     <div class="box">
                         <img src="img/img-1.jpg" alt="">
                         <div class="text">Beatriz Kakazu</div>
@@ -179,7 +179,7 @@
                         </P>
                     </div>
                 </div>
-                <div class="card card-doutor">
+                <div id="card-doutor2" class="card">
                     <div class="box">
                         <img src="img/img-2.jpg" alt="">
                         <div class="text">Solange Pinheiro</div>
@@ -187,7 +187,7 @@
                         </P>
                     </div>
                 </div>
-                <div class="card card-doutor">
+                <div id="card-doutor3" class="card">
                     <div class="box">
                         <img src="img/img-3.jpg" alt="">
                         <div class="text">Jéssica Gondo</div>
@@ -195,7 +195,7 @@
                         </P>
                     </div>
                 </div>
-                <div class="card card-doutor">
+                <div id="card-doutor4" class="card">
                     <div class="box">
                         <img src="img/img-4.jpg" alt="">
                         <div class="text">Wilsson Rodrigues</div>
@@ -203,7 +203,7 @@
                         </P>
                     </div>
                 </div>
-                <div class="card card-doutor">
+                <div id="card-doutor5" class="card">
                     <div class="box">
                         <img src="img/img-5.jpg" alt="">
                         <div class="text">Patricia Fernandes</div>
@@ -277,9 +277,12 @@
     <!--Modal para visualizar perfil do doutor-->
     <div id="modal-info" class="modal-container">
         <div class="modal">
-            <h3 class="text">Teste titulo</h3>
+            <h3 class="title">Teste titulo</h3>
             <form>
-                <input type="text" class ="input" placeholder="Email">
+                <div class="field">
+                    <div class="field">
+                        <input type="text" placeholder="Email" required>
+                    </div>
                 <input type="button" class="button" value="cadastrar">
                 <button class="fechar"><i class="fa-solid fa-arrow-left"></i></button>
             </form>
