--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#contact">Contato</a>
                 </li>
                 <li>
-                    <a href="/src/definir-horario/vissao/definir-horario.html">Definir horários</a>
+                    <a class="nav-link" href="src/definir-horarios/view/definir-horarios.html">Definir horários</a>
                 </li>
                 <li>
                     <a href="/src/acess/view/acesso.html">Entrar</a>
