--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="stylehome.css">
     <link rel="stylesheet" href="/libs/fontawesome/css/all.css">
-    <link rel="shortcut icon" href="./img/LogoAgenda.png" type="image/x-icon">
+    <link rel="icon" href="./img/Logo kg .png" type="image/x-icon">
 </head>
 
 <body>
@@ -69,7 +69,7 @@
             <h2 class="title">Sobre</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="img/img-1.jpg" alt="">
+                    <img src="img/Logo-escrita.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">Somos a Clínica <span class="typing-2"></span></div>
@@ -173,7 +173,7 @@
             <div class="carousel owl-carousel">
                 <div id="card-doutor1" class="card">
                     <div class="box">
-                        <img src="img/img-1.jpg" alt="">
+                        <img src="img/img-doutor.png" alt="">
                         <div class="text">Beatriz Kakazu</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
@@ -181,7 +181,7 @@
                 </div>
                 <div id="card-doutor2" class="card">
                     <div class="box">
-                        <img src="img/img-2.jpg" alt="">
+                        <img src="img/img-doutor.png" alt="">
                         <div class="text">Solange Pinheiro</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
@@ -189,7 +189,7 @@
                 </div>
                 <div id="card-doutor3" class="card">
                     <div class="box">
-                        <img src="img/img-3.jpg" alt="">
+                        <img src="img/img-doutor.png" alt="">
                         <div class="text">Jéssica Gondo</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
@@ -197,7 +197,7 @@
                 </div>
                 <div id="card-doutor4" class="card">
                     <div class="box">
-                        <img src="img/img-4.jpg" alt="">
+                        <img src="img/img-doutor.png" alt="">
                         <div class="text">Wilsson Rodrigues</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
@@ -205,7 +205,7 @@
                 </div>
                 <div id="card-doutor5" class="card">
                     <div class="box">
-                        <img src="img/img-5.jpg" alt="">
+                        <img src="img/img-doutor.png" alt="">
                         <div class="text">Patricia Fernandes</div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus commodi quia a voluptate ad explicabo.
                         </P>
