--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="text-1">Seja bem vindo a</div>
                 <div class="text-2">KG Agenda</div>
                 <div class="text-3">Faça seu <span class="typing"></span></div>
-                <a href="#">Agendar</a>
+                <a class="nav-link" href="src/agendamento/view/agendamento.html">Agendar</a>
             </div>
         </div>
     </section>
