--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     <a class="nav-link" href="src/definir-horarios/view/definir-horarios.html">Definir horários</a>
                 </li>
                 <li>
+                    <a class="nav-link" href="src/cadastro/view/cadUser.html">Dados Pessoais</a>
+                </li>
+                <li>
                     <a href="sair.php">Sair</a>
                 </li>
             </ul>
