--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a href="#teams">Equipe</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="src/definir-horarios/view/definir-horarios.html">Definir horários</a>
+                    <a class="nav-link" href="src/definir-horarios/view/definir-horarios.html">Definir Agenda</a>
                 </li>
                 <li>
                     <a class="nav-link" href="src/cadastro/view/cadUser.html">Dados Pessoais</a>
