--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
                     <a href="#teams">Equipe</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="src/definir-horarios/view/definir-horarios.html">Definir Agenda</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="src/cadastro/view/cadUser.html">Dados Pessoais</a>
+                    <a class="nav-link" href="src/cadastro/view/cadUser.php">Dados Pessoais</a>
                 </li>
                 <li>
                     <a href="sair.php">Sair</a>
@@ -183,7 +180,7 @@
         <div class="max-width">
             <h2 class="title">Nossa Equipe</h2>
             <div class="carousel owl-carousel">
-                <div id="card-doutor1" class="card">
+                 <div id="card-doutor1" class="card">
                     <div class="box">
                         <img src="img/img-doutor.png" alt=" ">
                         <div class="text ">Beatriz Kakazu</div>
