--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KG Agenda</title>
 
-    
+
     <link rel="stylesheet" href="stylehome.css">
     <link rel="stylesheet" href="/libs/fontawesome/css/all.css">
     <link rel="icon" href="./img/Logo kg .png" type="image/x-icon">
@@ -35,7 +35,7 @@
             <div class="logo"><a href="#">KG<span>Agenda</span></a></div>
             <ul class="menu">
                 <li>
-                    <a href="#home">Início</a>
+                    <a href="#home">Igor</a>
                 </li>
                 <li>
                     <a href="#about">Sobre</a>
