--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="logo"><a href="#">KG<span>Agenda</span></a></div>
             <ul class="menu">
                 <li>
-                    <a href="#home">Igor</a>
+                    <a href="#home">Iegor</a>
                 </li>
                 <li>
                     <a href="#about">Sobre</a>
