--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="logo"><a href="#">KG<span>Agenda</span></a></div>
             <ul class="menu">
                 <li>
-                    <a href="#home">kk</a>
+                    <a href="#home">Início</a>
                 </li>
                 <li>
                     <a href="#about">Sobre</a>
@@ -50,7 +50,7 @@
                     <a href="#teams">Equipe</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="src/cadastro/view/cadUser.php">Dados Pessoais</a>
+                    <a class="nav-link" href="src/cadastro/view/cadUser.html">Dados Pessoais</a>
                 </li>
                 <li>
                     <a href="sair.php">Sair</a>
